--- a/main.css
+++ b/main.css
@@ -40,8 +40,7 @@ stacbody{
     color: #333;
 	padding: 0px 0px;
 	position: relative; 
-	top: 80px;
-	left: -210px;
+	top: 80px;q
 }
 stac4{
 	font-family: 'Oswald', sans-serif;
@@ -50,7 +49,6 @@ stac4{
 	padding: 0px 0px;
 	position: relative; 
 	top: 300px;
-	left: -1000px;
 }
 cldr{
 	font-family: 'Oswald', sans-serif;
@@ -68,7 +66,6 @@ about{
 	padding: 0px 0px;
 	position: relative; 
 	top: 80px;
-	left: -600px;
 }
 pre{
 	font-family: 'Oswald', sans-serif;
