--- a/main.css
+++ b/main.css
@@ -38,26 +38,28 @@ stacbody{
 	font-family: 'Oswald', sans-serif;
 	font-size: 125%;
     color: #333;
-	padding: 0px 0px;
+    display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	width: 50%;
 	position: relative; 
-	top: 80px;q
+	top: 80px;
 }
 stac4{
-	font-family: 'Oswald', sans-serif;
-	font-size: 125%;
-    color: #333;
-	padding: 0px 0px;
+	display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	width: 50%;
 	position: relative; 
-	top: 300px;
+	top: 80px;
 }
 cldr{
-	font-family: 'Oswald', sans-serif;
-	font-size: 125%;
-    color: #333;
-	padding: 0px 0px;
+	display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	width: 50%;
 	position: relative; 
-	top: -100px;
-	left: 200px;
+	top: 140px;
 }
 about{
 	font-family: 'Oswald', sans-serif;
@@ -69,7 +71,7 @@ about{
 }
 pre{
 	font-family: 'Oswald', sans-serif;
-	text-align: center
+	text-align: center;
 }
 .blah{
 		font-family: 'Oswald', sans-serif;
