--- a/main.css
+++ b/main.css
@@ -41,9 +41,22 @@ stacbody{
     display: block;
   	margin-left: auto;
  	margin-right: auto;
+ 	padding: 15px 15px;
  	width: 50%;
 	position: relative; 
 	top: 80px;
+}
+stacbody2{
+	font-family: 'Oswald', sans-serif;
+	font-size: 175%;
+    color: #333;
+    display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	padding: 5px 5px;
+ 	width: 50%;
+	position: relative; 
+	top: 90px;
 }
 stac4{
 	display: block;
@@ -60,7 +73,25 @@ cldr{
  	margin-right: auto;
  	width: 100%;
 	position: relative; 
-	top: 140px;
+	top: 110px;
+	vertical-align: middle;
+}
+prim{
+	display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	width: 100%;
+	position: relative; 
+	top: 130px;
+	vertical-align: middle;
+}
+mpc{
+	display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	width: 100%;
+	position: relative; 
+	top: 150px;
 	vertical-align: middle;
 }
 about{
