--- a/main.css
+++ b/main.css
@@ -12,9 +12,8 @@ body{
 }
 h1{
 	font-family: 'Oswald', sans-serif;
-	font-size: 500%;
+	font-size: 1000%;
     color: #4d9efa;
-	padding: 0px 0px
 }
 h2{
 	font-family: 'Oswald', sans-serif;
@@ -34,19 +33,7 @@ stac{
 	position: relative; 
 	top: 60px;
 }
-stacbody{
-	font-family: 'Oswald', sans-serif;
-	font-size: 125%;
-    color: #333;
-    display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	padding: 15px 15px;
- 	width: 50%;
-	position: relative; 
-	top: 80px;
-}
-stacbody2{
+comesoon{
 	font-family: 'Oswald', sans-serif;
 	font-size: 175%;
     color: #333;
@@ -56,9 +43,68 @@ stacbody2{
  	padding: 5px 5px;
  	width: 50%;
 	position: relative; 
+	top: 70px;
+}
+stacbody{
+	font-family: 'Oswald', sans-serif;
+	font-size: 150%;
+    color: #333;
+    display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	padding: 5px 5px;
+ 	width: 50%;
+	position: relative; 
 	top: 90px;
 }
-stac4{
+stacimg4{
+	font-family: 'Oswald', sans-serif;
+	font-size: 150%;
+    color: #333;
+    display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	padding: 5px 5px;
+ 	width: 50%;
+	position: relative; 
+	top: 120px;
+}
+trec{
+	font-family: 'Oswald', sans-serif;
+	font-size: 175%;
+    color: #333;
+    display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	padding: 5px 5px;
+ 	width: 50%;
+	position: relative; 
+	top: 140px;
+}
+captionn{
+	font-family: 'Oswald', sans-serif;
+	font-size: 100%;
+    color: #333;
+    display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	width: 50%;
+	position: relative; 
+	top: 140px;
+}
+cldrhead{
+	font-family: 'Oswald', sans-serif;
+	font-size: 150%;
+    color: #333;
+    display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	padding: 5px 5px;
+ 	width: 50%;
+	position: relative; 
+	top: 50px;
+}
+cldr{
 	display: block;
   	margin-left: auto;
  	margin-right: auto;
@@ -67,14 +113,17 @@ stac4{
 	top: 80px;
 	vertical-align: middle;
 }
-cldr{
-	display: block;
+primhead{
+	font-family: 'Oswald', sans-serif;
+	font-size: 150%;
+    color: #333;
+    display: block;
   	margin-left: auto;
  	margin-right: auto;
- 	width: 100%;
+ 	padding: 5px 5px;
+ 	width: 50%;
 	position: relative; 
-	top: 110px;
-	vertical-align: middle;
+	top: 100px;
 }
 prim{
 	display: block;
@@ -85,19 +134,56 @@ prim{
 	top: 130px;
 	vertical-align: middle;
 }
+mpchead{
+	font-family: 'Oswald', sans-serif;
+	font-size: 150%;
+    color: #333;
+    display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	padding: 5px 5px;
+ 	width: 50%;
+	position: relative; 
+	top: 150px;
+}
 mpc{
 	display: block;
   	margin-left: auto;
  	margin-right: auto;
  	width: 100%;
 	position: relative; 
-	top: 150px;
+	top: 180px;
+	vertical-align: middle;
+}
+stac4{
+	display: block;
+  	margin-left: auto;
+ 	margin-right: auto;
+ 	width: 100%;
+	position: relative; 
+	top: 90px;
 	vertical-align: middle;
 }
 about{
 	font-family: 'Oswald', sans-serif;
-	font-size: 125%;
+	font-size: 175%;
+    color: #4d9efa;
+	padding: 0px 0px;
+	position: relative; 
+	top: 80px;
+}
+message{
+	font-family: 'Oswald', sans-serif;
+	font-size: 150%;
     color: #333;
+	padding: 0px 0px;
+	position: relative; 
+	top: 80px;
+}
+sig{
+	font-family: 'Oswald', sans-serif;
+	font-size: 175%;
+    color: #4d9efa;
 	padding: 0px 0px;
 	position: relative; 
 	top: 80px;
