--- a/main.css
+++ b/main.css
@@ -108,9 +108,10 @@ cldr{
 	display: block;
   	margin-left: auto;
  	margin-right: auto;
- 	width: 50%;
+ 	width: 100%;
 	position: relative; 
 	top: 80px;
+	vertical-align: middle;
 }
 primhead{
 	font-family: 'Oswald', sans-serif;
@@ -130,7 +131,8 @@ prim{
  	margin-right: auto;
  	width: 100%;
 	position: relative; 
-	top: 50px;
+	top: 130px;
+	vertical-align: middle;
 }
 mpchead{
 	font-family: 'Oswald', sans-serif;
@@ -148,9 +150,10 @@ mpc{
 	display: block;
   	margin-left: auto;
  	margin-right: auto;
- 	width: 50%;
+ 	width: 100%;
 	position: relative; 
 	top: 180px;
+	vertical-align: middle;
 }
 stac4{
 	display: block;
