--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("glitch.jpg");
+	background-image: url("glitch.gif");
 	font-family: 'Oswald', sans-serif;
     color: #333;
 	text-align: center;
