--- a/main.css
+++ b/main.css
@@ -1,62 +1,66 @@
 body{
-	background-image: url("glitch.gif");
-	font-family: 'Oswald', sans-serif;
-    color: #333;
+	background:white;
+	font-family: 'Lexend Tera', sans-serif;
+    color: black;
 	text-align: center;
 	padding: 5px 5px;
 }
 .class{
 	font-family: 'Oswald', sans-serif;
 	font-size: 150%;
-	text-align: center
+	text-align: center;
+	position: relative; 
+	top: 10px;
 }
 h1{
-	font-family: 'Pirata One', cursive;
-	font-size: 600%;
+	font-family: 'Lexend Tera', sans-serif;
+	font-size: 300%;
     color: black;
-    top: -50px;
+	text-align: center;
+	padding: 5px 5px;
+	position: relative;
+	top: 140px;
 }
 h2{
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Lexend Tera', sans-serif;
 	font-size: 200%;
-    color: #333;
+    color: black;
 	text-align: center;
-	padding: 0px 0px;
 	position: relative; 
-	top: -60px;
+	top: 100px;
+	float: none;
+	margin: auto;
 }
-stac{
-	font-family: 'Oswald', sans-serif;
-	font-size: 80px;
+h3{
+	font-family: 'Lexend Tera', sans-serif;
+	font-size: 200%;
     color: black;
-    text-align: center
-	padding: 0px 0px;
+	text-align: center;
 	position: relative; 
-	top: 60px;
+	top: 100px;
 }
-comesoon{
-	font-family: 'Oswald', sans-serif;
-	font-size: 175%;
+words{
+	font-family: 'Lexend Tera', sans-serif;
     color: black;
-    display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	padding: 5px 5px;
- 	width: 50%;
-	position: relative; 
-	top: 70px;
-}
-stacbody{
-	font-family: 'Oswald', sans-serif;
-	font-size: 150%;
-    color: black;
-    display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	padding: 5px 5px;
- 	width: 50%;
-	position: relative; 
+	font-size: 90%;
+	text-align: center;
+	padding: 5px 5px;
+	position: relative;
 	top: 90px;
+}
+abt{
+	background:white;
+	font-family: 'Lexend Tera', sans-serif;
+    color: black;
+	text-align: center;
+	padding: 5px 5px;
+}
+mnts{
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+	position: relative;
+	top: 180px;
 }
 phlogo{
 	font-family: 'Oswald', sans-serif;
@@ -69,131 +73,6 @@ phlogo{
  	width: 50%;
 	position: relative; 
 	top: 70px;
-}
-stacimg4{
-	font-family: 'Oswald', sans-serif;
-	font-size: 150%;
-    color: #333;
-    display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	padding: 5px 5px;
- 	width: 50%;
-	position: relative; 
-	top: 120px;
-}
-trec{
-	font-family: 'Oswald', sans-serif;
-	font-size: 175%;
-    color: black;
-    display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	padding: 5px 5px;
- 	width: 50%;
-	position: relative; 
-	top: 140px;
-}
-captionn{
-	font-family: 'Oswald', sans-serif;
-	font-size: 100%;
-    color: black;
-    display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	width: 50%;
-	position: relative; 
-	top: 170px;
-}
-cldrhead{
-	font-family: 'Oswald', sans-serif;
-	font-size: 150%;
-    color: black;
-    display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	padding: 5px 5px;
- 	width: 50%;
-	position: relative; 
-	top: 50px;
-}
-cldr{
-	display: block;
- 	width: 100%;
-	position: relative; 
-	top: 80px;
-	vertical-align: middle;
-}
-primhead{
-	font-family: 'Oswald', sans-serif;
-	font-size: 150%;
-    color: black;
-    display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	padding: 5px 5px;
- 	width: 50%;
-	position: relative; 
-	top: 100px;
-}
-prim{
-	display: block;
- 	width: 100%;
-	position: relative; 
-	top: 130px;
-	vertical-align: middle;
-}
-mpchead{
-	font-family: 'Oswald', sans-serif;
-	font-size: 150%;
-    color: black;
-    display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	padding: 5px 5px;
- 	width: 50%;
-	position: relative; 
-	top: 150px;
-}
-mpc{
-	display: block;
- 	width: 100%;
-	position: relative; 
-	top: 180px;
-	vertical-align: middle;
-}
-stac4{
-	display: block;
-  	margin-left: auto;
- 	margin-right: auto;
- 	width: 100%;
-	position: relative; 
-	top: 90px;
-	vertical-align: middle;
-}
-about{
-	font-family: 'Oswald', sans-serif;
-	font-size: 175%;
-    color: black;
-	padding: 0px 0px;
-	position: relative; 
-	top: 80px;
-}
-message{
-	font-family: 'Oswald', sans-serif;
-	font-size: 150%;
-    color: black;
-	padding: 0px 0px;
-	position: relative; 
-	top: 80px;
-}
-sig{
-	font-family: 'Oswald', sans-serif;
-	font-size: 175%;
-    color: black;
-	padding: 0px 0px;
-	position: relative; 
-	top: 80px;
 }
 pre{
 	font-family: 'Oswald', sans-serif;
@@ -212,18 +91,32 @@ ul {
     overflow: hidden;
     background-color: black;
     position: fixed;
-    top: 0;
-    width: 100%;
+    height: 100px;
+    top: -20px;
+    width: 94%;
+    margin: 3%;
+    padding: 0;
 }
 
 .navbar a {
-    float: left;
+	font-family: 'Lexend Tera', sans-serif;
+    float: right;
     display: block;
-    color: #f2f2f2;
+    color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 35px 80px;
     text-decoration: none;
+    position: relative;
 }
+
+.navbar b1 {
+	font-family: 'Oswald', sans-serif;
+	font-size: 150%;
+    color: white;
+    padding: 0px 20px;
+    float: left;
+}
+
 
 .navbar a:hover {
     background: #ddd;
