--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body{
 	background:white;
 	font-family: Arial;
     font-size: 10pt;
-    color: #333;
+    color: black;
 	text-align: center;
 }
 .class{
