--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ pagetext{
 	font-size: 100%;
     color: black;
     text-align: center;
-    float: right;
+     display: inline-block;
     padding-top: 100px;
     margin-left: 10%;
  	margin-right: 10%;
