--- a/main.css
+++ b/main.css
@@ -28,10 +28,10 @@ pagetext{
 	font-size: 100%;
     color: black;
     text-align: center;
-    float: none;
+    float: right;
     padding-top: 100px;
     margin-left: 10%;
- 	margin-right: 10%;
+ 	margin-right: 15%;
 
 }
 contactinfo{
