--- a/main.css
+++ b/main.css
@@ -1,10 +1,14 @@
 .navbar {
-    background-color: black;
-    height: 50px;
-    width: 1400px;
-    margin-left: auto;
- 	margin-right: auto;
-	position: relative;
+	font-family: 'Lexend Tera', sans-serif;
+    font-size: 15px;
+    float: right;
+    color: white;
+    text-align: center;
+    padding: 10px 10px;
+    text-decoration: none;
+    position: relative;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .navbar a {
