--- a/main.css
+++ b/main.css
@@ -34,6 +34,9 @@ pagetext{
  	margin-right: 25%;
 
 }
+pagevideo{
+    padding: 50px 50px;
+}
 contactinfo{
     font-family: 'Lexend Tera', sans-serif;
 	font-size: 100%;
