--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 .navbar {
-    display:inline-block;
-    background-color: #535a61;
-    width: 100%;
-    margin-left: auto;
- 	margin-right: auto;
+    display:block;
+    background-color: black;
+    margin-left: 25%;
+ 	margin-right: 25%;
+    padding: 10px 10px;
 }
 .navbar a {
     
@@ -22,13 +22,37 @@
     color: black;
 }
 body {
-    background-color: #535a61;
+    background-color: rgb(255, 255, 255);
+}
+h1{
+	font-family: 'Lexend Tera', sans-serif;
+    font-size: 25px;
+    color: black;
+    text-align: center;
+    padding: 10px 10px;
+    text-decoration: none;
+    position: relative;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .center-logo {
     display:block;
     margin-left: auto;
     margin-right: auto;
     width: 5%;
+  }
+.center-stratpic {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
+  }
+  .center-citypic {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1%;
+    width: 50%;
   }
 @font-face {
     font-family: 'FM Bolyar Sans Pro';
@@ -39,7 +63,7 @@ body {
 }
 .companyname {
     font-family: "FM Bolyar Sans Pro";
-    color: white;
+    color: black;
     text-align: center;
     padding: 10px 10px;
     text-decoration: none;
@@ -53,11 +77,68 @@ body {
 }
 p{
     font-family: 'Lexend Tera', sans-serif;
-    margin-top: 5%;
+    margin-top: 1%;
     margin-right: 25%;
 	margin-left: 25%;
     font-size: 15px;
-    color: white;
+    color: black;
     word-wrap: break-word;
     text-align: center;
 }
+.shift{
+    text-align: left;
+    text-indent: 4em; /* or 15px, or 5%, 2rem or 3vw */  
+}
+  /* The dropdown container */
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  /* Dropdown button */
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: black;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+  }
+  
+  /* Add a red background color to navbar links on hover */
+  .navbar a:hover, .dropdown:hover .dropbtn {
+    background: #ddd;
+    color: black;
+  }
+  
+  /* Dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  /* Add a grey background color to dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
