--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 .navbar {
     display:block;
     background-color: black;
-    margin-left: 25%;
- 	margin-right: 25%;
+    margin-left: 10%;
+ 	  margin-right: 10%;
     padding: 10px 10px;
 }
 .navbar a {
@@ -22,8 +22,9 @@
     color: black;
 }
 body {
-    background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
 }
+
 h1{
 	font-family: 'Lexend Tera', sans-serif;
     font-size: 25px;
@@ -39,7 +40,7 @@ h1{
     display:block;
     margin-left: auto;
     margin-right: auto;
-    width: 5%;
+    width: 7%;
   }
 .center-stratpic {
     display:block;
@@ -52,7 +53,7 @@ h1{
     margin-left: auto;
     margin-right: auto;
     padding-top: 1%;
-    width: 50%;
+    width: 80%;
   }
 @font-face {
     font-family: 'FM Bolyar Sans Pro';
@@ -79,66 +80,9 @@ p{
     font-family: 'Lexend Tera', sans-serif;
     margin-top: 1%;
     margin-right: 25%;
-	margin-left: 25%;
+	  margin-left: 25%;
     font-size: 15px;
-    color: black;
+    color: rgb(255, 255, 255);
     word-wrap: break-word;
     text-align: center;
 }
-.shift{
-    text-align: left;
-    text-indent: 4em; /* or 15px, or 5%, 2rem or 3vw */  
-}
-  /* The dropdown container */
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  /* Dropdown button */
-  .dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
-  }
-  
-  /* Add a red background color to navbar links on hover */
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background: #ddd;
-    color: black;
-  }
-  
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /* Add a grey background color to dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
