--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
     right: 0;
     left: 0;
     top: 0;
+    height: 8vh;
     position: absolute;
     padding-left: 200px;
     padding-right: 200px;
@@ -34,7 +35,7 @@ body{
 h1{
     left: 0;
 	font-family: 'Lexend Tera', sans-serif;
-    font-size: 17px;
+    font-size: 1vw;
     color: rgb(255, 255, 255);
     text-align: left;
     padding: 10px 10px;
