--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
     right: 0;
     left: 0;
     top: 0;
-    position: absolute;
+    position: relative;
     padding-left: 200px;
     padding-right: 200px;
 }
