--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
     right: 0;
     left: 0;
     top: 0;
+    height: 8%;
     position: relative;
     padding-left: 200px;
     padding-right: 200px;
@@ -21,7 +22,8 @@ body{
 }
 .page1text{
     padding-top: 15vh;
-    margin-left: 7%;
+    margin-left: 5%;
+    margin-right: 5%;
     font-size: 3vw;
 }
 .page1{
@@ -60,7 +62,7 @@ body{
     padding:0;
 }
 .splashtext{
-    margin-top: 5%;
+    margin-top: 3%;
     margin-left: 7%;
 }
 .splash{
