--- a/main.css
+++ b/main.css
@@ -62,13 +62,13 @@ body{
     padding:0;
 }
 .splashtext{
-    margin-top: -45px;
+    margin-top: -40px;
     margin-left: 7%;
 }
 .splash{
     left: 0;
 	font-family: "Korbin W01 Medium";
-    font-size: 13vw;
+    font-size: 25vh;
     color: rgb(255, 255, 255);
     text-align:left;
     display:flex;
@@ -76,7 +76,7 @@ body{
     font-weight: bold;
     background: linear-gradient( rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25) ),url('back2.gif');
     background-size: cover;
-    height: 100vh;
+    height: 200vh;
     padding:0;
 }
 h1{
