--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ body{
 }
 .splashtext{
 	font-family: "Korbin W01 Medium";
-    font-size: 175px;
+    font-size: 11vh;
     text-align:left;
     display:flex;
     position: relative;
