--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ body{
     margin-left: 7%;
     font-size: 7vw;
     font-weight: bold;
+    margin-top: 10vh;
 }
 .page1text{
     color: white;
@@ -37,12 +38,12 @@ body{
 .page1{
     left: 0;
 	font-family: "Bruno Ace", sans-serif;
-    color: rgb(255, 255, 255);
     text-align:left;
     display:block;
     position: static;
-    background-color: rgb(37, 41, 87);
+    background: linear-gradient( rgba(22, 22, 22, 0.7), rgba(0, 0, 0, 0.7) ),url('back2.gif');
     background-size: cover;
+    background-position: center;
     height: 100vh;
     padding:0;
 }
@@ -100,7 +101,7 @@ a:hover {
     text-decoration: none;
 }
 .fullscreen {
-    position: relative;
+    position: static;
     width: 100vw;
     height: 100%;
     background: linear-gradient( rgba(22, 22, 22, 0.7), rgba(0, 0, 0, 0.7) ),url('back2.gif');
