--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
     padding-left: 200px;
     padding-right: 200px;
     bottom: 0;
-    height: 10vh;
+    height: 100px;
  
 }
 body{
@@ -25,7 +25,7 @@ body{
     margin-left: 7%;
     font-size: 7vw;
     font-weight: bold;
-    margin-top: 10vh;
+    margin-top: 100px;
 }
 .page1text{
     color: white;
@@ -82,7 +82,7 @@ body{
     position: relative;
     font-weight: bold;
     background-size: cover;
-    margin-top: 10vh;
+    margin-top: 100px;
     margin-bottom: 15vh;
     margin-left: 10%;
 }
