--- a/main.css
+++ b/main.css
@@ -108,29 +108,6 @@ a:hover {
     background-size: cover;
     background-position: center;
 }
-.fullscreen-wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    color: white;
-}
-.fade-out {
-    overflow: hidden;
-    transition: opacity 0.5s ease;
-    opacity: 1;
-}
-
-.fullscreen-wrapper h1, h2 {
-    padding-left: 10%;
-}
-.fullscreen-wrapper h1 {
-    font-size: 128px;
-    padding-top: 25%;
-}
-.fullscreen-wrapper h2 {
-    font-size: 256px;
-    padding-top: 10%;
-}
 h1{
     left: 0;
 	font-family: 'Lexend Tera', sans-serif;
@@ -157,4 +134,61 @@ h1{
     top: 0;
     size: 100%;
     right: 200px;
+}
+
+/* Menu list */
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+ul li {
+    padding: 0 20px;
+}
+
+ul li a {
+    font-family: 'Lexend Tera', sans-serif;
+    font-size: 125%;
+    color: white;
+    font-size: 18px;
+    display: block;
+    padding-top: 35px;
+}
+
+/* Collapsed menu (hidden by default) */
+#nav-links.collapsed {
+    display: none;
+}
+.loginpage{
+    color: rgb(255, 255, 255);
+    font-family: "Bruno Ace", sans-serif;
+    margin-left: 7%;
+    font-size: 35px;
+    font-weight: bold;
+    margin-top: 100px;
+    
+}
+input[type="text"], input[type="password"] {
+    width: 500px;  /* Full width */
+    padding: 15px; /* Larger padding to make the box bigger */
+    margin: 10px 0; /* Spacing between inputs */
+    font-size: 16px; /* Increase text size */
+    border-radius: 50px; /* Rounded corners */
+    border: 1px solid #ccc; /* Border around the input */
+}
+input[type="submit"] {
+    padding: 15px;
+    font-size: 25px;
+    background-color: #474747;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    text-align: center;
+}
+input[type="submit"]:hover {
+    background-color: #474747;
 }
